<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart E-bike</string>

    <string name="hello_world">Hello world!</string>


    <!--<string name="API_KEY">AIzaSyC7me4xClDs77brOR8h9lbScQXe2OpqBCA</string>-->
    <!--AIzaSyC7me4xClDs77brOR8h9lbScQXe2OpqBCA-->

    <!-- OnePlus--><string name="API_KEY">AIzaSyDkT6PCDa-kjdwgXU527kF01z8tEFyUWd8</string>
    <!-- <string name="API_KEY">AIzaSyCauSR8TV8xoJowOvhpPSsb-ET6g7K2nsc</string>-->
    <!-- Nexus 5 
    <string name="API_KEY">AIzaSyDtnSStQ-FF6qym21OYr4ZBWsl4FTAKKZw</string>-->

    <!-- Used for Places API (Itinerary) -->
    <string name="API_KEY_SERVER">AIzaSyA0PKeHgfGshCobEC7q0mDADXWL0Ns5nlE</string>



    <!-- Page d'accueil -->
    <string name="connexion">Se connecter</string>
    <string name="creerItineraire">Créer un itinéraire</string>
    <string name="mesItineraires">Mes itinéraires</string>
    <string name="apropos">A propos</string>

    <!-- Page Mes donnnées -->
    <string name="donnees">Mes données</string>
    <string name="statistiques">+ Mes Statistiques</string>
    <string name="sante">+ Ma santé</string>
    <string name="meteo">+ Météo</string>


    <string name="lorem">Lorem ipsum tralalalala super youhou</string>
    <string name="descriptionLogo">Logo de l\'application Smart E-Bike</string>
    <string name="parametres">Mes paramètres</string>

    <!-- Connexion -->
    <string name="title_activity_connexion">Connexion</string>
    <string name="etatConnexion">État de la connexion :</string>
    <string name="gestionVelo">Gérer le vélo</string>

    <!-- RPi -->
    <string name="title_activity_rpi">RPi</string>
    <string name="deverouillerVelo">Déverouiller le vélo</string>
    <string name="verouillerVelo">Verouiller le vélo</string>

    <!-- Navigation -->
    <string name="following_label">Not following</string>
    <string name="position_label">Position</string>
    <string name="title_activity_maps">Map</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_itineraire">Nouvel itinéraire</string>


    <!-- Itineraire -->
    <string name="tv_depart">Départ</string>
    <string name="auto_comp_tv_depart">Départ</string>
    <string name="cb_myposition">Ma position</string>
    <string name="tv_arrivee">Arrivée</string>
    <string name="auto_comp_tv_arrivee">Arrivée</string>
    <string name="cb_assistance">Activer l\'assitance</string>
    <string name="btn_go">Calculer itinéraire</string>
    <string name="label_distance">Distance: </string>
    <string name="label_duration">Durée: </string>s
    <string name="btn_start_itinerary">Commencer la navigation !</string>

    <!-- Navigation activity -->
    <string name="title_activity_navigation">Navigation</string>
    <string name="label_departure">Départ</string>
    <string name="label_arrival">Arrivée</string>
    <string name="label_stop_nav">Annuler la navigation</string>
    <string name="label_start_nav">Commencer</string>
    <string name="value_speed">0 km/h</string>
    <string name="value_arriving_time">00h00</string>

    <!-- Historique -->
    <string name="détails">voir</string>
    <string name="arrivée">Arrivée</string>
    <string name="date">Date</string>
    <string name="plus">Plus</string>
    <string name="title_activity_historique">Historique</string>
    <string name="title_activity_details">Details</string>
    <string name="details_itineraire">Détails de l\'itinéraire</string>
    <string name="text_apropos">"Merci d'utiliser Smart E­Bike
        \nSmart E­Bike est une application entièrement imaginée et développée par des étudiants de l'ESIR
        \n(École Supérieure d'Ingénieurs de Rennes)
        \n\nContact :
        \nSi vous rencontrez le moindre problème concernant l'application ou que vous avez des idées, remarques ou demandes, contactez nous :
        \nE­mail : smart_ebike@gmail.com
        \n\nL'application « Smart E­Bike » est en accès libre.
        \nL'application utilise les données en temps réels, nous déclinons toute responsabilité au sujet d'éventuelles erreurs.
        \n\nV1.0
        \nCopyright 2015 © All rights reserved"
    </string>

    <!-- A Propos -->
    <string name="title_activity_apropos">A Propos</string>

    <!-- Navigation activity - Dialog -->
    <string name="dialog_text">Voulez-vous enregistrer ce parcours ?</string>
    <string name="dialog_yes">Oui</string>
    <string name="dialog_no">Non</string>

    <!-- Parametres -->
    <string name="title_activity_parametres">Paramètres</string>
    <string name="remove_data">Supprimer l\'historique de navigation</string>

</resources>