<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".Donnees">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/donnees" />


        <Button
            android:id="@+id/statistiques"
            style="@style/bouton"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:text="@string/statistiques" />


        <TextView
            android:id="@+id/texteStats"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem" />

        <Button
            android:id="@+id/meteo"
            style="@style/bouton"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:text="@string/meteo" />

        <TextView
            android:id="@+id/texteMeteo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_world" />

        <Button
            android:id="@+id/sante"
            style="@style/bouton"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:text="@string/sante" />

        <TextView
            android:id="@+id/texteSante"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_world" />

    </LinearLayout>
</ScrollView>