
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:contentDescription="@string/descriptionLogo"/>


    <!--
        <?xml version="1.0" encoding="utf-8"?>
        <set xmlns:android="http://schemas.android.com/apk/res/android">
            <rotate android:fromDegrees="0"
                android:toDegrees="360"
                android:pivotX="50%"
                android:pivotY="50%"
                android:duration="600"
                android:repeatMode="restart"
                android:repeatCount="infinite"
                android:interpolator="@android:anim/cycle_interpolator"/>

        </set>
        -->
    <Button
        android:text="@string/connexion"
        android:id="@+id/button"
        style="@style/bouton"

        />

    <Button
        android:text="@string/creerItineraire"
        android:id="@+id/button2"
        style="@style/bouton"

        />

    <Button
        android:text="@string/mesItineraires"
        android:id="@+id/button3"
        style="@style/bouton"
     />


    <Button
        android:text="@string/parametres"
        android:id="@+id/button4"
        style="@style/bouton"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        />

    <Button
        android:text="@string/apropos"
        android:id="@+id/button5"
        style="@style/bouton"

        />

</LinearLayout>
</ScrollView>