<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.esir.si.smarte_bike.navigation.Itineraire"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tv_depart"
            android:id="@+id/tv_depart"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:singleLine="false"
            android:phoneNumber="false"
            android:textStyle="bold" />

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auto_comp_tv_depart"
            android:id="@+id/auto_comp_tv_depart"
            android:completionThreshold="3" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/tv_arrivee"
            android:id="@+id/tv_arrivee"
            android:gravity="center"
            android:completionThreshold="3"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textStyle="bold" />

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auto_comp_tv_arrivee"
            android:id="@+id/auto_comp_tv_arrivee"/>

        </LinearLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="0.07">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_assistance"
            android:id="@+id/cb_assistance"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_go"
        android:id="@+id/btn_go"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="right" />

</LinearLayout>
