<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/map_navigation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.MapFragment"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#ff1f8fe5"
        android:id="@+id/nav_top_bar"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_departure"
            android:id="@+id/label_departure"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="30px"
            android:layout_marginTop="8dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_arrival"
            android:id="@+id/label_arrival"
            android:textSize="30px"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/value_departure"
            android:textColor="#ffffffff"
            android:text=""
            android:layout_alignBaseline="@+id/label_departure"
            android:layout_alignBottom="@+id/label_departure"
            android:layout_toRightOf="@+id/label_arrival"
            android:layout_toEndOf="@+id/label_arrival"
            android:textSize="30px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/value_arrival"
            android:textColor="#ffffffff"
            android:layout_alignTop="@+id/label_arrival"
            android:layout_toRightOf="@+id/label_arrival"
            android:layout_toEndOf="@+id/label_arrival"
            android:textSize="30px"
            android:text="" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nav_btn_stop"
            android:src="@drawable/ic_close_white_36dp"
            android:background="?android:attr/selectableItemBackground"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:clickable="true"
            android:onClick="stopNavigation"
            android:nestedScrollingEnabled="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/nav_bottom_bar"
        android:background="#ff1f8fe5"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/value_duration"
            android:textColor="#ffffffff"
            android:textSize="50px"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="10dp"
            android:textIsSelectable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/value_distance"
            android:textSize="40px"
            android:layout_alignBottom="@+id/value_duration"
            android:layout_toRightOf="@+id/value_duration"
            android:layout_toEndOf="@+id/value_duration"
            android:paddingBottom="2dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_start_nav"
            android:id="@+id/nav_btn_start"
            android:drawableRight="@drawable/ic_chevron_right_white_36dp"

            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="50px"
            android:textAllCaps="false"
            android:textColor="#ffffffff"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="startNavigation"
            android:paddingLeft="10dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/nav_bottom_bar_step"
        android:background="#ff1f8fe5"
        android:visibility="invisible" >

        <ImageButton
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:id="@+id/nav_btn_next_step"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_chevron_right_white_36dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="nextStep" />

        <ImageButton
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:id="@+id/nav_btn_previous_step"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_chevron_left_white_36dp"
            android:layout_alignTop="@+id/nav_btn_next_step"
            android:layout_toLeftOf="@+id/nav_btn_next_step"
            android:layout_toStartOf="@+id/nav_btn_next_step"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:onClick="previousStep" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/value_instructions"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/nav_btn_previous_step"
            android:layout_toStartOf="@+id/nav_btn_previous_step"
            android:gravity="center"
            android:textColor="#ffffffff"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:textAlignment="center" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_speed"
        android:id="@+id/value_speed"
        android:layout_above="@+id/nav_bottom_bar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="30dp"
        android:textColor="#ffffffff"
        android:textStyle="bold"
        android:background="#3c000000"
        android:padding="5dp"
        android:textIsSelectable="false"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_arriving_time"
        android:id="@+id/value_arriving_time"
        android:textSize="30dp"
        android:textColor="#ffffffff"
        android:textStyle="bold"
        android:background="#3c000000"
        android:padding="5dp"
        android:textIsSelectable="false"
        android:layout_above="@+id/nav_bottom_bar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:autoText="false"
        android:visibility="invisible" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nav_img_battery"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/ic_battery_30_white_36dp"
        android:background="#3c000000"
        android:padding="5dp"
        android:visibility="invisible" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/nav_img_elevation"
        android:layout_above="@+id/nav_bottom_bar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#ffffff" />

</RelativeLayout>